[project]
name = "syl-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "streamlit>=1.57.0",
]
